--- a/.github/workflows/print-env-info.yml
+++ b/.github/workflows/print-env-info.yml
@@ -10,14 +10,14 @@ jobs:
   print_env:
     steps:
     - name: Print env variables
-      runs: printenv
+      run: printenv
     - name: Print inputs
-      runs: echo ${{ inputs }}
+      run: echo ${{ inputs }}
     - name: Print github
-      runs: echo ${{ github }}
+      run: echo ${{ github }}
     - name: List binaries (commands you can use)
-      runs: ls -al /bin
+      run: ls -al /bin
     - name: Print current directory
-      runs: pwd
+      run: pwd
     - name: Print kernel
-      runs: uname -a
+      run: uname -a
