feat: fix timeout workflow

--- a/.github/workflows/timeout.yml
+++ b/.github/workflows/timeout.yml
@@ -25,6 +25,6 @@ jobs:
       run: tail -f /dev/null
       continue-on-error: true
     - name: Print last step status
-      run: echo steps.hanging-step.status
+      run: echo ${{ steps.hanging-step.status }}
     - name: End
       run: echo end
