feat: fix workflow

--- a/.github/workflows/using-job-output.yml
+++ b/.github/workflows/using-job-output.yml
@@ -30,7 +30,7 @@ jobs:
       if: ${{ ! needs.prepare.outputs.prepared }}
       run: exit 1
     - name: Mix Ingredients
-      name: echo ingredients mixed
+      run: echo ingredients mixed
     outputs:
       dough: dough
       mixed: true
