--- a/.github/workflows/using-cache.yml
+++ b/.github/workflows/using-cache.yml
@@ -19,12 +19,12 @@ jobs:
         EOF
         echo $(date) >> /var/${{ inputs.filename }}
     - name: Upload
-      uses: actions@upload-artifact@v4
+      uses: actions/upload-artifact@v4
       with:
         name: ${{ inputs.filename }}
         path: /var/${{ inputs.filename }}
         retention-days: 1
-  use:
+  download:
     runs-on: ubuntu-latest
     needs: upload
     steps:
@@ -33,3 +33,5 @@ jobs:
       with: ${{ inputs.filename }}
     - name: Print file
       run: cat ${{ inputs.filename }}
+    - name: Show cache info
+      run: ls -alh ${{ inputs.filename }} 
