--- a/.github/workflows/calling-workflow.yml
+++ b/.github/workflows/calling-workflow.yml
@@ -4,16 +4,16 @@ on:
   workflow_dispatch:
 
 jobs:
-  call:
+  call: # notice how we use another workflow at the job level, not step level
+    uses: .github/workflows/callable-workflow.yml
+    with:
+      x: 6
+      y: 19
+  result:
     runs-on: ubuntu-latest
+    needs: call
     steps:
-    - name: Call another workflow
-      id: calling
-      uses: .github/workflows/callable-workflow.yml
-      with:
-        x: 6
-        y: 19
     - name: Show output of called workflow
       run: |
-        echo ${{ steps.calling.outputs.sum }}
-        echo ${{ steps.calling.outputs.differnce }}
+        echo ${{ needs.call.outputs.sum }}
+        echo ${{ needs.call.outputs.differnce }}
