--- a/.github/workflows/calling-workflow.yml
+++ b/.github/workflows/calling-workflow.yml
@@ -5,7 +5,7 @@ on:
 
 jobs:
   call: # notice how we use another workflow at the job level, not step level
-    uses: ./.github/workflows/callable-workflow.yml@latest
+    uses: ./.github/workflows/callable-workflow.yml # cannot specify version for local workflow
     with:
       x: 6
       y: 19
