feat: fix callable workflow

--- a/.github/workflows/callable-workflow.yml
+++ b/.github/workflows/callable-workflow.yml
@@ -31,16 +31,17 @@ jobs:
         cat $GITHUB_OUTPUT
     - name: Print inputs
       run: |
-        echo x: ${{ inputs.x }}  y: ${{ inputs.y }}
+        echo x: ${{ inputs.x }}
+        echo y: ${{ inputs.y }}
     - name: Evaluate sum
       id: sum
       run: |
-        sum=expr ${{ inputs.x }} + ${{ inputs.y }}
+        sum=$( expr ${{ inputs.x }} + ${{ inputs.y }} )
         echo "sum=$sum" >> $GITHUB_OUTPUT
     - name: Evaluate difference
       id: difference
       run: |
-        difference=$(expr ${{ inputs.x }} - ${{ inputs.y }})
+        difference=$( expr ${{ inputs.x }} - ${{ inputs.y }} )
         echo "difference=$difference" >> $GITHUB_OUTPUT
     - name: Show content of GITHUB_OUTPUT again
       run: |
