--- a/app/package.json
+++ b/app/package.json
@@ -7,7 +7,10 @@
   "type": "commonjs",
   "main": "app.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "npx ts-node app.ts",
+    "build": "npx tsc",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "lint": "npx eslint ."
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
@@ -19,6 +22,7 @@
   },
   "dependencies": {
     "@types/express": "^5.0.0",
-    "express": "^4.21.2"
+    "express": "^4.21.2",
+    "http-status-codes": "^2.3.0"
   }
 }
