--- a/app/package.json
+++ b/app/package.json
@@ -7,10 +7,9 @@
   "type": "commonjs",
   "main": "app.ts",
   "scripts": {
-    "dev": "npx ts-node app.ts",
+    "dev": "npx ts-node src/app.ts",
     "build": "npx tsc",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "lint": "npx eslint ."
+    "lint": "npx eslint src/"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
