--- a/app/tsconfig.json
+++ b/app/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
     "target": "es2023",                                  /* Set the JavaScript language version for emitted JavaScript and include compatible library declarations. */
-    "rootDir": ".",
+    "rootDir": "./src",
     "outDir": "./dist",
 
     /* Modules */
