--- a/.github/workflows/detect-change-in-file.yml
+++ b/.github/workflows/detect-change-in-file.yml
@@ -10,7 +10,7 @@ jobs:
     - name: checkout repo
       uses: actions/checkout@v4
     - name: "hash: ${{ hashFiles('app/src/**/*') }}"
-      run:
+      run: ""
     - name: download cache
       id: cache
       uses: actions/cache@v4
@@ -18,4 +18,4 @@ jobs:
         path: .
         key: src-${{ hashFiles('app/src/**/*') }}
     - name: "cache-hit: ${{ steps.cache.outputs.cache-hit != 'true' }}"
-      run:
+      run: ""
