--- a/.github/workflows/create-release.yml
+++ b/.github/workflows/create-release.yml
@@ -12,6 +12,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - name: release
+      with:
+        GH_TOKEN: ${{ secrets.github_token }}
       run: |
         gh release create v${{ inputs.tag }} --generate-notes
 # this will also create the tag in git, which you can later fetch using git fetch --tags
