--- a/.github/workflows/create-release.yml
+++ b/.github/workflows/create-release.yml
@@ -11,6 +11,8 @@ jobs:
   release:
     runs-on: ubuntu-latest
     steps:
+    - name: checkout
+      uses: actions/checkout@v4
     - name: release
       env:
         GH_TOKEN: ${{ secrets.GH_TOKEN }}
