ci: fix package workflow

--- a/.github/workflows/create-package.yml
+++ b/.github/workflows/create-package.yml
@@ -2,10 +2,14 @@ name: Create Package
 
 on:
   workflow_dispatch:
-    input:
+    inputs:
       tag:
         type: string
         defualt: 1.0.0
+
+env:
+  image_name: ${{ github.repository.lowercase }}
+  image_source: ${{ github.server_url/github.repository.lowercase }}
 
 jobs:
   pack:
@@ -14,14 +18,16 @@ jobs:
     - name: build image
       run: |
         docker build
-          --tag ${{ github.repository }} \
+          --tag ghcr.io/$image_name \
           --file app/Dockerfile \
-          --label "org.opencontainers.image.source=https://github.com/Hasuzawa/cicd-sandbox" \
-          --label "org.opencontainers.image.description=Simple container." \
-          --label "org.opencontainers.image.licenses=MIT"
+          --label version=${{ inputs.tag }}
+          --label "org.opencontainers.image.source=$image_source \
+          --label "org.opencontainers.image.description='Simple container'" \
+          --label "org.opencontainers.image.licenses=MIT" \
+          ./app
     - name: login registry
       run: |
         docker login ghcr.io -u GITHUB --password-stdin $GITHUB_TOKEN
     - name: upload image
       run: |
-        docker push ghcr.io/${{ github.repository }}:${{ inputs.tag }}
+        docker push ghcr.io/$image_name:${{ inputs.tag }}
