--- a/.github/workflows/create-package.yml
+++ b/.github/workflows/create-package.yml
@@ -5,7 +5,7 @@ on:
     inputs:
       tag:
         type: string
-        defualt: 1.0.0
+        default: 1.0.0
 
 env:
   image_name: ${{ github.repository.lowercase }}
