--- a/.github/workflows/create-package.yml
+++ b/.github/workflows/create-package.yml
@@ -26,8 +26,8 @@ jobs:
     - repository
     runs-on: ubuntu-latest
     env:
-      IMAGE_TAG: "${{ inputs.registry }}/${{ jobs.repository.outputs.name }}:${{ inputs.version }}"
-      IMAGE_SRC: ${{ github.server_url }}/${{ jobs.repository.outputs.name }}
+      IMAGE_TAG: "${{ inputs.registry }}/${{ needs.repository.outputs.name }}:${{ inputs.version }}"
+      IMAGE_SRC: ${{ github.server_url }}/${{ needs.repository.outputs.name }}
     steps:
     - name: build image
       run: |
@@ -36,7 +36,7 @@ jobs:
           --file app/Dockerfile \
           --label version=${{ inputs.version }}
           --label "org.opencontainers.image.source=$IMAGE_SRC" \
-          --label "org.opencontainers.image.description='Simple container'" \
+          --label "org.opencontainers.image.description='simple container'" \
           --label "org.opencontainers.image.licenses=MIT" \
           ./app
     - name: login registry
