--- a/.github/workflows/create-package.yml
+++ b/.github/workflows/create-package.yml
@@ -14,7 +14,7 @@ jobs:
   repository:
     runs-on: ubuntu-latest
     outputs:
-      name: ${{ steps.format.REPO_NAME }}
+      name: ${{ steps.format.outputs.REPO_NAME }}
     steps:
     - name: format repository name
       id: format
