--- a/.github/workflows/create-package.yml
+++ b/.github/workflows/create-package.yml
@@ -31,6 +31,8 @@ jobs:
       IMAGE_TAG: ${{ inputs.registry }}/${{ needs.repository.outputs.name }}:${{ inputs.version }}
       IMAGE_SRC: ${{ github.server_url }}/${{ needs.repository.outputs.name }}
     steps:
+    - name: checkout repository
+      runs: actions/checkout@v4
     - name: show image info
       run: |
         echo $IMAGE_TAG
