--- a/.github/workflows/create-package.yml
+++ b/.github/workflows/create-package.yml
@@ -34,12 +34,13 @@ jobs:
     - name: build
       id: build
       run: |
+        cd app
         npm install --omit=dev
         npm run build
     - uses: actions/upload-artifact@v4
       with:
         name: dist
-        path: ./app/dist
+        path: ./dist
         retention-days: 3
 
   pack:
@@ -61,6 +62,7 @@ jobs:
         ls -al dist
     - name: build image
       run: |
+        cd app
         docker build \
           --tag $IMAGE_TAG \
           --file app/Dockerfile \
