--- a/.github/workflows/create-package.yml
+++ b/.github/workflows/create-package.yml
@@ -31,6 +31,7 @@ jobs:
       uses: actions/setup-node@v4
       with:
         node-version: 22.x
+    - uses: actions/checkout@v4
     - name: build
       id: build
       run: |
@@ -43,7 +44,7 @@ jobs:
         path: ./dist
         retention-days: 3
 
-  pack:
+  publish:
     needs:
     - repository
     - build
@@ -52,6 +53,7 @@ jobs:
       IMAGE_TAG: ${{ inputs.registry }}/${{ needs.repository.outputs.name }}:${{ inputs.version }}
       IMAGE_SRC: ${{ github.server_url }}/${{ needs.repository.outputs.name }}
     steps:
+    - uses: actions/checkout@v4
     - uses: actions/download-artifact@v4
       with:
         name: dist
@@ -65,7 +67,7 @@ jobs:
         cd app
         docker build \
           --tag $IMAGE_TAG \
-          --file app/Dockerfile \
+          --file Dockerfile \
           --label version=${{ inputs.version }} \
           --label "org.opencontainers.image.source=$IMAGE_SRC" \
           --label "org.opencontainers.image.description='simple container'" \
