--- a/.github/workflows/create-package.yml
+++ b/.github/workflows/create-package.yml
@@ -38,12 +38,10 @@ jobs:
         cd app
         npm install
         npm run build
-        pwd
-        ls -al
     - uses: actions/upload-artifact@v4
       with:
         name: dist
-        path: ./dist
+        path: app/dist
         retention-days: 3
 
   publish:
