--- a/.github/workflows/create-package.yml
+++ b/.github/workflows/create-package.yml
@@ -41,7 +41,7 @@ jobs:
     - uses: actions/upload-artifact@v4
       with:
         name: dist
-        path: app/dist
+        path: app/dist    # relative to repo base, cd of previous steps has no effect
         retention-days: 3
 
   publish:
@@ -57,7 +57,7 @@ jobs:
     - uses: actions/download-artifact@v4
       with:
         name: dist
-        path: app/
+        path: app/dist/   # relative to repe base
     - name: show image info
       run: |
         echo $IMAGE_TAG
