--- a/.github/workflows/create-package.yml
+++ b/.github/workflows/create-package.yml
@@ -11,7 +11,7 @@ on:
         default: ghcr.io
 
 jobs:
-  repository:
+  format:
     runs-on: ubuntu-latest
     outputs:
       name: ${{ steps.format.outputs.REPO_NAME }}
@@ -50,20 +50,18 @@ jobs:
     - build
     runs-on: ubuntu-latest
     env:
-      IMAGE_TAG: ${{ inputs.registry }}/${{ needs.repository.outputs.name }}:${{ inputs.version }}
-      IMAGE_SRC: ${{ github.server_url }}/${{ needs.repository.outputs.name }}
+      IMAGE_TAG: ${{ inputs.registry }}/${{ needs.format.outputs.name }}:${{ inputs.version }}
+      IMAGE_SRC: ${{ github.server_url }}/${{ needs.format.outputs.name }}
     steps:
     - uses: actions/checkout@v4
     - uses: actions/download-artifact@v4
       with:
         name: dist
-        path: app/dist/   # relative to repe base
+        path: app/dist/   # relative to repe base, will create directory if it does not exist
     - name: show image info
       run: |
         echo $IMAGE_TAG
         echo $IMAGE_SRC
-        ls -al
-        ls -al app
     - name: build image
       run: |
         cd app
@@ -76,8 +74,12 @@ jobs:
           --label "org.opencontainers.image.licenses=MIT" \
           .
     - name: login registry
+      env:
+        CR_PAT: ${{ secrets.CR_PAT }}   # container registry pat
       run: |
-        docker login ${{ inputs.registry }} -u GITHUB --password-stdin $GITHUB_TOKEN
+        docker login ${{ inputs.registry }} \
+          --username GITHUB \
+          --password-stdin $CR_PAT
     - name: upload image
       run: |
-        docker push $image_tag
+        docker push $IMAGE_TAG
