--- a/.github/workflows/validate-input.yml
+++ b/.github/workflows/validate-input.yml
@@ -24,7 +24,7 @@ jobs:
           echo invalid pattern by glob pattern
         fi
 
-        if ![[ ! ${{ inputs.version }} =~ [0-9]+\.[0-9]+\.[0-9] }}  ]]; then
+        if [[ ! ${{ inputs.version }} =~ [0-9]+\.[0-9]+\.[0-9] }}  ]]; then
           ok=0
           echo invalid pattern by regex pattern
         fi
