--- a/.github/workflows/validate-input.yml
+++ b/.github/workflows/validate-input.yml
@@ -18,17 +18,21 @@ jobs:
     - name: validate version
       run: |
         ok=1
+        version=${{ intputs.version }}
 
-        if [[ ! ${{ inputs.version }} == [0-9].[0-9].[0-9] ]]; then
-          ok=0;
-          echo invalid pattern by glob pattern;
+        if [[ ! $version == [0-9].[0-9].[0-9] ]]
+        then
+          ok=0
+          echo invalid pattern by glob pattern
         fi
 
-        if [[ ! ${{ inputs.version }} =~ [0-9]+\.[0-9]+\.[0-9] }} ]]; then
-          ok=0;
-          echo invalid pattern by regex pattern;
+        if [[ ! $version =~ [0-9]+\.[0-9]+\.[0-9] }} ]]
+        then
+          ok=0
+          echo invalid pattern by regex pattern
         fi
 
-        if [[ $ok == 0 ]]; then
-          exit 1;
+        if [[ $ok == 0 ]]
+        then
+          exit 1
         fi
