--- a/.github/workflows/create-package.yml
+++ b/.github/workflows/create-package.yml
@@ -50,7 +50,9 @@ jobs:
     - build
     runs-on: ubuntu-latest
     env:
-      IMAGE_TAG: ${{ inputs.registry }}/${{ needs.format.outputs.name }}:${{ inputs.version }}
+      # this will be ghcr.io/{author_name}/{repository_name}:version
+      # IMAGE_TAG: ${{ inputs.registry }}/${{ needs.format.outputs.name }}:${{ inputs.version }}
+      IMAGE_TAG: ${{ inputs.registry }}/${ ${{ github.repository_owner }},, }/shop:${{ inputs.version }}
       IMAGE_SRC: ${{ github.server_url }}/${{ needs.format.outputs.name }}
     steps:
     - uses: actions/checkout@v4
