feat: update Dockerfile

--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -1,6 +1,9 @@
 FROM node:23-alpine
 
-LABEL VERSION = 1.0.0
+# LABEL VERSION = 1.0.0 this should be provided in CICD
+LABEL org.opencontainers.image.source=https://github.com/Hasuzawa/cicd-sandbox
+LABEL org.opencontainers.image.description="Simple container"
+LABEL org.opencontainers.image.licenses=MIT
 
 WORKDIR /usr/var/app
 COPY ./dist .
